# LostInCompilation

./: .gitignore  CHANGES.md  CMakeLists.txt  Doxyfile.conf  README.md  RELEASES.md  build.sh
apps/ast-tools/: CMakeLists.txt
apps/ast-tools/include/: ASTPrinter.h  DotPrinter.h
apps/ast-tools/src/: ASTPrinter.cpp  DotPrinter.cpp  Main.cpp  ParseTreePrinter.cpp
apps/calculator/: .gitignore  CMakeLists.txt  README.md
apps/calculator/include/cli/: Console.h  MetricsManager.h
apps/calculator/include/compile/: MathCompiler.h  MathInterpretor.h
apps/calculator/include/compile/eval/: Analyzer.h  MathEvaluator.h
apps/calculator/include/compile/eval/function/: CMathFunction.h  Function.h  FunctionFactory.h  InvalidFunctionException.h
apps/calculator/include/compile/parser/: MathParser.h
apps/calculator/include/compile/parser/grammar/: GrammarLibs.h
apps/calculator/include/compile/traverse/ast/: ASTreeWalker.h
apps/calculator/src/: Main.cpp
apps/calculator/src/cli/: Console.cpp  MetricsManager.cpp
apps/calculator/src/compile/: MathCompiler.cpp  MathInterpretor.cpp
apps/calculator/src/compile/eval/: Analyzer.cpp  MathEvaluator.cpp
apps/calculator/src/compile/eval/function/: CMathFunction.cpp  Function.cpp  FunctionFactory.cpp  InvalidFunctionException.cpp
apps/calculator/src/compile/parser/: MathParser.cpp
apps/calculator/src/compile/parser/grammar/: GrammarLibs.cpp
apps/calculator/src/compile/traverse/ast/: ASTreeWalker.cpp
apps/calculator/test/: TestMain.cpp  Test_Analyzer.cpp  Test_Parser.cpp
apps/calculator/test/compile/: Test_MathCompiler.cpp
apps/calculator/test/compile/eval/: Test_Analyzer.cpp  Test_MathEvaluator.cpp
apps/calculator/test/compile/parser/: Test_Parser.cpp
docs/: index.md
libs/asttool/: .gitignore  CMakeLists.txt
libs/asttool/include/compile/tool/: DotPrinter.h  ParseTreePrinter.h
libs/asttool/src/compile/tool/: ASTPrinter.cpp  DotPrinter.cpp  ParseTreePrinter.cpp
libs/asttool/test/compile/tool/: Test_DotPrinter.cpp
libs/asttool/test/verify/: DOTPRINTER_Simple.dot
libs/compiler/: CMakeLists.txt  README.md
libs/compiler/include/algorithm/event/: ComponentType.h  InternalEvent.h
libs/compiler/include/algorithm/tree/ast/: ASTNode.h  ASTUtils.h
libs/compiler/include/compile/: Compilable.h  Interpretable.h  SourceCodePosition.h
libs/compiler/include/compile/binding/: DataBindingUtils.h  DataValueHolder.h  RuntimeData.h  ValueHolder.h
libs/compiler/include/compile/eval/: Evaluator.h
libs/compiler/include/compile/parser/: Parser.h
libs/compiler/include/compile/symtab/: ObjectValue.h  RuntimeStack.h  ScopedSymbolTable.h  SimpleSymbolTable.h  Symbol.h  SymbolRepository.h  SymbolTable.h  SymbolTableFactory.h  SymbolTableStack.h  SymbolTableTreeNode.h
libs/compiler/include/compile/symtab/visitor/: SimpleSymbolTableVisitor.h  SymbolTableVisitor.h  VisitedSymbolTable.h
libs/compiler/include/error/: ArithmeticException.h  ParseException.h  SyntaxError.h
libs/compiler/include/tool/: Appender.h  AsciiPrinter.h  AsciiTreePrinter.h  DotPrinter.h  DotTreePrinter.h  Printer.h
libs/compiler/src/algorithm/event/: InternalEvent.cpp
libs/compiler/src/algorithm/tree/ast/: ASTNode.cpp  ASTUtils.cpp
libs/compiler/src/compile/: SourceCodePosition.cpp
libs/compiler/src/compile/binding/: DataBindingUtils.cpp  DataValueHolder.cpp  RuntimeData.cpp
libs/compiler/src/compile/symtab/: RuntimeStack.cpp  SimpleSymbolTable.cpp  Symbol.cpp  SymbolTable.cpp  SymbolTableFactory.cpp  SymbolTableStack.cpp  SymbolTableTreeNode.cpp
libs/compiler/src/compile/symtab/visitor/: SimpleSymbolTableVisitor.cpp
libs/compiler/src/error/: ArithmeticException.cpp  ParseException.cpp  SyntaxError.cpp
libs/compiler/src/tool/: Appender.cpp  AsciiPrinter.cpp  AsciiTreePrinter.cpp  DotPrinter.cpp  DotTreePrinter.cpp  Printer.cpp
libs/compiler/test/: TestMain.cpp  Test_AST.cpp  Test_DataBlock.cpp  Test_ParseException.cpp  Test_RuntimeStack.cpp  Test_SymbolTable.cpp
libs/compiler/test/algorithm/event/: Test_InternalEvent.cpp
libs/compiler/test/algorithm/tree/ast/: Test_AST.cpp
libs/compiler/test/compile/: Test_SourceCodePosition.cpp
libs/compiler/test/compile/binding/: Test_RuntimeData.cpp
libs/compiler/test/compile/symtab/: Test_ObjectValue.cpp  Test_RuntimeStack.cpp  Test_SymbolTable.cpp  Test_SymbolTableStack.cpp
libs/compiler/test/error/: Test_ParseException.cpp
libs/compiler/test/tool/: Test_AsciiPrinter.cpp  Test_AsciiTreePrinter.cpp  Test_DotPrinter.cpp  Test_DotTreePrinter.cpp
libs/shacat/: .gitignore  CMakeLists.txt  README.md  TODO.md
libs/shacat/include/algorithm/event/: Event.h
libs/shacat/include/algorithm/tree/: TreeBuilder.h  TreeContext.h  TreeNode.h
libs/shacat/include/algorithm/visitor/: VisitedObject.h  Visitor.h
libs/shacat/include/common/: Utils.h
libs/shacat/include/error/: Exception.h  StackTraceUtils.h
libs/shacat/include/hack/: AccessPrivate.h  DebugLib.h
libs/shacat/include/lang/: Object.h
libs/shacat/include/log/: Logger.h
libs/shacat/src/algorithm/event/: Event.cpp
libs/shacat/src/algorithm/tree/: TreeBuilder.cpp  TreeNode.cpp
libs/shacat/src/common/: Conditions.cpp  Conversions.cpp  Strings.cpp
libs/shacat/src/error/: Exception.cpp  StackTraceUtils.cpp
libs/shacat/src/lang/: Object.cpp
libs/shacat/src/log/: Logger.cpp
libs/shacat/test/: Test_Basics.cpp  Test_Conditions.cpp  Test_Converts.cpp  Test_Exception.cpp  Test_Hack.cpp  Test_Logger.cpp  Test_Object.cpp  Test_Strings.cpp  Test_Tree_Basic.cpp  Test_Tree_Traverse.cpp  Test_Tree_Visitor.cpp
libs/shacat/test/algorithm/event/: Test_Event.cpp  Test_EventListener.cpp
libs/shacat/test/algorithm/tree/: Test_Tree_Basic.cpp
libs/shacat/test/algorithm/visitor/: BlueAndRedVisitedObject.h  CountVisitor.h  Test_Visitor.cpp
libs/shacat/test/common/: Test_Conditions.cpp  Test_Converts.cpp  Test_Strings.cpp
libs/shacat/test/error/: Test_Exception.cpp
libs/shacat/test/hack/: Test_Hack.cpp
libs/shacat/test/lang/: TestDerivedObject.hpp  Test_Object.cpp
libs/shacat/test/log/: Test_Logger.cpp
(+1697 files in other folders)
